Now the navbar is fixed, the page content doesn't know about it, so w… (#636)
* Now the navbar is fixed, the page content doesn't know about it, so we need padding, otherwise the navbar overlaps the top heading


* apply header hight to all pages

---------

--- a/application/frontend/src/pages/Explorer/explorer.scss
+++ b/application/frontend/src/pages/Explorer/explorer.scss
@@ -1,5 +1,6 @@
 main#explorer-content {
   padding: 30px;
+  margin: var(--header-height) 0;
 
   .search-field {
     input {
